# flexit

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.py  docker-compose.yml  pyproject.toml  settings.ini.in
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  flexit-ci.yml
data/: categories.csv  persons.csv  show_cast_intersection.csv  show_category_intersection.csv  show_person_intersection.csv  shows.csv
flexit/: config.py  creation.py  dto.py  models.py  queries.py
notebooks/: clean_and_ingestion_prep.ipynb
notebooks/.ipynb_checkpoints/: clean_and_ingestion_prep-checkpoint.ipynb
tests/: test_flexit.py  test_flexit_creation.py  test_flexit_queries.py
