[tool.poetry]
name = "flexit"
version = "1.1.0"
description = ""
authors = ["Andrew Loutfi <aloutfi@umn.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.3"
SQLAlchemy = "^1.4.34"
python-decouple = "^3.6"
pydantic = "^1.9.0"
dateparser = "^1.1.1"
SQLAlchemy-Utils = "^0.38.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.11.0"
pytest = "^7.1.1"
pandas = "^1.4.1"
names = "^0.3.0"
pytest-postgresql = "^4.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
