[tool.poetry]
name = "flexit"
version = "1.1.0"
description = ""
authors = ["Andrew Loutfi <aloutfi@umn.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.3"
SQLAlchemy = "^2.0.0"
python-decouple = "^3.6"
pydantic = "^2.0"
dateparser = "^1.1.1"
SQLAlchemy-Utils = "^0.42.0"

[tool.poetry.dev-dependencies]
ipykernel = "^7.0.0"
pytest = "^9.0.0"
pandas = "^2.0.0"
names = "^0.3.0"
pytest-postgresql = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
